...
      linking={linking}
    >
      <Stack.Navigator screenOptions={{ headerShown: false }}>
        {!user ? (
          <>
            <Stack.Screen name="Welcome" component={WrappedWelcomeScreen} />
            <Stack.Screen name="Login" component={WrappedLoginScreen} />
            <Stack.Screen name="Register" component={WrappedRegisterScreen} />
            <Stack.Screen
              name="VerifyEmail"
              component={WrappedVerifyEmailScreen}
            />
            <Stack.Screen
...
